--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Githud Repo</title>
+    <link rel="stylesheet" href="css/styel.css">
 </head>
 <body>
     <h1>My first Githud Repo</h1>
+    <div>
+        <h3>Bsangladesh</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione saepe quaerat distinctio accusamus quas aspernatur fugiat sequi vel facere voluptatum perspiciatis omnis sed, incidunt tenetur a porro obcaecati placeat fugit.</p>
+    </div>
+    <img src="img/becca-tapert--A_Sx8GrRWg-unsplash.jpg" alt="thi is a imege">
+    <img src="img/top-view-assortment-colorful-leaves-with-round-card.jpg" alt="thi is a imege2">
 </body>
 </html>
